# AdventOfCode

./: .gitignore  build.gradle
2016/aoc-core/src/aoc/: mod.rs
2017/: README.md  build.gradle  settings.gradle
2017/aoc-rust/: README.md
2017/aoc-rust/1/src/: main.rs
2017/aoc-rust/12/: Cargo.toml
2017/aoc-rust/2/: Cargo.toml
2017/aoc-rust/25/src/: main.rs
2017/aoc-rust/3/src/: main.rs
2017/aoc-rust/5/: Cargo.toml
2017/gradle/wrapper/: gradle-wrapper.properties
aoc-core/: Cargo.toml
aoc-core/src/aoc/: input.rs
aoc-rust/1/: Cargo.toml
aoc-rust/12/src/: main.rs
aoc-rust/2/src/: main.rs
aoc-rust/3/: Cargo.toml
aoc-rust/4/: Cargo.toml
aoc-rust/4/src/: main.rs
aoc-rust/5/src/: main.rs
aoc-rust/all/src/aoc/: astar.rs
aoc2018/: Cargo.toml
aoc2018/src/: main.rs
aoc2019/: Cargo.toml
aoc2019/input/: 02.txt  04.txt  05.txt  11.txt
aoc2019/src/: intcode.rs
aoc2020/: Cargo.toml
aoc2020/src/: day18.pest
aoc2021/: Cargo.toml
aoc2021/input/: 02.txt  03.txt  04.txt  08.txt  09.txt
aoc2022/: Cargo.toml
aoc2022/input/: 02.txt  04.txt
aoc2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
aoc2024/: Cargo.toml  bacon.toml
aoc2024/src/: day1.rs  lib.rs  main.rs
src/main/java/aoc/: HexPoint.java  Util.java
src/main/java/aoc2016/: Nine.java  (+1 more)
util/: Cargo.toml
util/src/: lib.rs
util/src/aoc/: astar.rs  digits.rs  expanding_grid.rs  frequency.rs  grid.rs  input.rs  lines.rs  linked_list.rs  mod.rs  top_k.rs
(+38 files in other folders)
