[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Michael Rose <elementation@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
failure = "0.1"
itertools = "0.7"
num = "0.2"
lazy_static = "1.2"
permutohedron = "0.2.4"
util = { path = "../util" }
regex = "1.1"
pest = "2.1"
pest_derive = "2.1"