[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Michael Rose <elementation@gmail.com>"]
edition = "2021"

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bit-set = "0.5"
chrono = "0.4"
failure = "0.1"
itertools = "0.12"
nom = "7.1"
num = "0.2"
lazy_static = "1.2"
util = { path = "../util" }
regex = "1.10"