[package]
name = "aoc2024"
version = "0.1.0"
authors = ["Michael Rose <elementation@gmail.com>"]
edition = "2021"

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
anyhow = "1.0"
bit-set = "0.8.0"
chrono = "0.4"
itertools = "0.13.0"
nom = "7.1"
num = "0.4.3"
thiserror = "2.0"
lazy_static = "1.2"
util = { path = "../util" }
regex = "1.10"